--- a/index.html
+++ b/index.html
@@ -7,6 +7,43 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>Portfolio</div>
+    <section class="sec1">
+        <div class="home">
+            <div class="nav">
+                <ul>
+                    <li>home</li>
+                    <li>galleries</li>
+                    <li>reviews</li>
+                    <li>shop</li>
+                    <li>videos and tutorials</li>
+                    <li>about</li>
+                    <li>contact</li>
+                </ul>
+            </div>
+
+            <div class="homel">
+                <img src="images/faith-te.png" alt="">
+                <h1>Fine Art Artist</h1>
+                <h1>Web Developer</h1>
+            </div>
+
+            <div class="homer">
+                <div class="whatsnew">
+                    <h2>What's New</h2>
+                    <p>I completed a new oil painting over the course of the weekend. It was a bigger piece with a...</p>
+                    <p>Read more on my blog</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="sec2"></section>
+    <section class="sec3"></section>
+    <section class="sec4"></section>
+    <section class="sec5"></section>
+    <section class="sec6"></section>
+    <section class="sec7"></section>
+    <section class="sec8"></section>
+    <section class="sec9"></section>
 </body>
 </html>
