--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
 
             <div class="homel">
-                <img src="images/faith-te.png" alt="">
+                <img src="images/faith-te.png" alt="Faith Te - Fine Art Artist and Web Developer">
                 <h1>Fine Art Artist</h1>
                 <h1>Web Developer</h1>
             </div>
