--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type=“text/css” href="style.css">
-    <title>Document</title>
+    <title>Faith Te - Online Portfolio</title>
+
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <section class="sec1">
         <div class="home">
