Updated index file. Worked on homepage.

--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
 </head>
 
 <body>
-    <section class="sec1">
-        <div class="home">
-            <div class="nav">
-                <ul>
-                    <li>home</li>
-                    <li>galleries</li>
-                    <li>reviews</li>
-                    <li>shop</li>
-                    <li>videos and tutorials</li>
-                    <li>about</li>
-                    <li>contact</li>
-                </ul>
-            </div>
+    <section id="home">
+        <div class="nav">
+            <ul>
+                <a href="#home"><li>home</li></a>
+                <a href="#galleries"><li>galleries</li></a>
+                <a href="#reviews"><li>reviews</li></a>
+                <a href="#shop"><li>shop</li></a>
+                <a href="#vidstuts"><li>videos and tutorials</li></a>
+                <a href="#about"><li>about</li></a>
+                <a href="#contact"><li>contact</li></a>
+            </ul>
+        </div>
 
+        <div class="home">
             <div class="homel">
                 <img src="images/faith-te.png" alt="Faith Te - Fine Art Artist and Web Developer">
                 <h1>Fine Art Artist</h1>
@@ -37,15 +37,25 @@
                 </div>
             </div>
         </div>
+
+        <div class="homebasebox"></div>
     </section>
 
-    <section class="sec2"></section>
-    <section class="sec3"></section>
-    <section class="sec4"></section>
-    <section class="sec5"></section>
-    <section class="sec6"></section>
-    <section class="sec7"></section>
-    <section class="sec8"></section>
-    <section class="sec9"></section>
+    <section id="galleries">
+        <div class="galleries">
+            <div class="sectionhead">
+                <img src="images/dividerl.png" alt="">
+                <div class="sectiontitle"></div>
+                <img src="images/dividerr.png" alt="">
+            </div>
+        </div>
+    </section>
+
+    <section id="reviews"></section>
+    <section id="shop"></section>
+    <section id="vidstuts"></section>
+    <section id="about"></section>
+    <section id="contact"></section>
+    <section id="maillist"></section>
 </body>
 </html>
